--- a/app/src/main/res/layout/movie_row_item.xml
+++ b/app/src/main/res/layout/movie_row_item.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="ClickListener"
-            type="com.example.moveApp.ui.home.adapter.MenuClickListener" />
+            type="com.example.moveApp.ui.home.adapter.MovieClickListener" />
     </data>
 
 
