--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,6 +18,15 @@
 
     <style name="Theme.BaseProject.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="CollapsingToolbarLayoutExpandedTextStyle" parent="Theme.BaseProject">
+        <item name="android:textColor">@android:color/transparent</item>
+        <item name="android:textSize">0sp</item>
+    </style>
+
+    <style name="ExpandedToolbarLayoutExpandedTextStyle" parent="Theme.BaseProject">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/headerFont</item>
+    </style>
 
     <style name="ToolbarStyle" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <item name="colorControlNormal">@color/white</item>
