Add YouTube Player

--- a/app/src/main/res/layout/video_row_item.xml
+++ b/app/src/main/res/layout/video_row_item.xml
@@ -19,6 +19,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="@{(v)->MovieVideoClickListener.onItemClick(v,Item)}"
         android:layout_margin="7dp">
 
 
