add movie Video

--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="373.12"
-    android:viewportHeight="373.12">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
-        android:fillColor="@color/white"
-        android:pathData="M266.667,234.667h-16.96l-5.867,-5.867c20.907,-24.213 33.493,-55.68 33.493,-90.133C277.333,62.08 215.253,0 138.667,0S0,62.08 0,138.667s62.08,138.667 138.667,138.667c34.453,0 65.92,-12.587 90.133,-33.387l5.867,5.867v16.853L341.333,373.12l31.787,-31.787L266.667,234.667zM138.667,234.667c-53.013,0 -96,-42.987 -96,-96c0,-53.013 42.987,-96 96,-96c53.013,0 96,42.987 96,96C234.667,191.68 191.68,234.667 138.667,234.667z" />
+        android:fillColor="@android:color/white"
+        android:pathData="M15.5,14h-0.79l-0.28,-0.27C15.41,12.59 16,11.11 16,9.5 16,5.91 13.09,3 9.5,3S3,5.91 3,9.5 5.91,16 9.5,16c1.61,0 3.09,-0.59 4.23,-1.57l0.27,0.28v0.79l5,4.99L20.49,19l-4.99,-5zM9.5,14C7.01,14 5,11.99 5,9.5S7.01,5 9.5,5 14,7.01 14,9.5 11.99,14 9.5,14z" />
 </vector>
